--- a/donasi.html
+++ b/donasi.html
@@ -113,7 +113,7 @@
             <div class="container pt-3 px-5">
                 <div class="row">
                     <div class="col">
-                        <p class="bd-text">Buat Donasi</p>
+                        <p class="bd-text">Donasi Sekarang!</p>
                     </div>
                 </div>
 
@@ -121,93 +121,87 @@
                     <div class="col p-3">
                         <div class="row">
                             <div class="col">
-                                <p class="bd-text1">Gambar Donasi<span style="color: red;">*</span></p>
-                            </div>
-                        </div>
-                        <div class="row p-5">
-                            <div class="col text-center">
-                                <img src="Assets/Rectangle 33.png" alt="camera" width="70px">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-2 offset-5 text-center">
-                                <p class="gambar-btn">+ Pilih Gambar</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-4 offset-4 text-center">
-                                <p class="text-btn">Tambahkan hingga 5 gambar</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row border-image mb-3">
-                    <div class="col p-3">
-                        <div class="row">
-                            <div class="col">
-                                <p class="bd-text1">Informasi Donasi</p>
+                                <p class="bd-text1">Donasi</p>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col ">
-                                <p class="label-name d-inline">Kategori<span style="color: red;">*</span></p>
+                                <p class="label-name d-inline">Ditujukan<span style="color: red;">*</span></p>
                                 <div class="border-input p-2">
-                                    <p class="d-inline p-3 text-grey">Pilih Kategori</p>
-                                    <img src="Assets/eva_arrow.png" alt="arrow" class="d-inline" style="float: right;">
+                                    <p class="d-inline p-3 text-grey ">Korban Banjir Kota Ciberon</p>
                                 </div>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col ">
-                                <p class="label-name d-inline">Judul Penggalangan Dana<span style="color: red;">*</span>
+                                <p class="label-name d-inline">Penggalang</span>
                                 </p>
-                                <p class="d-inline me-4" style="float: right;">0/50</p>
                                 <div class="border-input p-2">
-                                    <p class="d-inline p-3 text-grey">Contoh: Bantu Korban Bencana Banjir Sulteng</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col ">
-                                <p class="label-name d-inline">Deskripsi<span style="color: red;">*</span>
-                                </p>
-                                <p class="d-inline me-4" style="float: right;">0/1000</p>
-                                <div class="border-input p-2 height-border">
-                                    <p class="d-inline p-3 text-grey">Menceritakan kejadian bencana (Korban Jiwa,
-                                        korban Luka-luka, Rumah Rusan,Dan Lain-lain)</p>
+                                    <p class="d-inline p-3 text-grey">Yayasan SayaBisa</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
                 <div class="row border-image mb-3">
                     <div class="col p-3">
                         <div class="row">
                             <div class="col">
-                                <p class="bd-text1">Lainnya</p>
+                                <p class="bd-text1">Donatur</p>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col ">
-                                <p class="label-name d-inline">Target Donasi<span style="color: red;">*</span></p>
+                                <p class="label-name d-inline">Nama<span style="color: red;">*</span></p>
+                                <div class="border-input p-2">
+                                    <p class="d-inline p-3 text-grey">...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col ">
+                                <p class="label-name d-inline">Nomor Seluler<span style="color: red;">*</span></p>
                                 <div class="row">
                                     <div class="col-1 border-input p-2 mx-3  text-center">
-                                        <p class="d-inline">Rp</p>
+                                        <p class="d-inline">+62</p>
                                     </div>
                                     <div class="col border-input p-2 me-4">
-                                        <p class="d-inline text-grey">0</p>
+                                        <p class="d-inline text-grey">...</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col ">
-                                <p class="label-name d-inline">Batas Waktu Donasi<span style="color: red;">*</span></p>
+                                <p class="label-name d-inline">Email<span style="color: red;">*</span></p>
                                 <div class="border-input p-2">
-                                    <p class="d-inline p-3 text-grey">Pilih Tanggal</p>
+                                    <p class="d-inline p-3 text-grey">...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row border-image mb-3">
+                    <div class="col p-3">
+                        <div class="row">
+                            <div class="col">
+                                <p class="bd-text1">Jumlah dan Pembayaran</p>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col ">
+                                <p class="label-name d-inline">Jumlah<span style="color: red;">*</span></p>
+                                <div class="border-input p-2">
+                                    <p class="d-inline p-3 text-grey">Jumlah yang ingin anda donasikan</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col ">
+                                <p class="label-name d-inline">Metode<span style="color: red;">*</span></p>
+                                <div class="border-input p-2">
+                                    <p class="d-inline p-3 text-grey">Pilih Metode Pemnbayaran</p>
                                     <img src="Assets/eva_arrow.png" alt="arrow" class="d-inline" style="float: right;">
                                 </div>
                             </div>
@@ -215,20 +209,12 @@
                     </div>
                 </div>
 
-                <div class="row mb-3">
-                    <div class="col-3 text-center">
-                        <img src="Assets/Group 21.png" alt="qrCode">
-                    </div>
-                    <div class="col-4 vertical-center text-center">
-                        <p class="gambar-btn-1">Generate QR Code</p>
-                        <p class="text-btn">QR digunakan sebagai link donasi</p>
+                <div class="row">
+                    <div class="col text-center">
+                        <p class="butt-red">Donasikan</p>
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <div class="col-4 offset-4 text-center">
-                        <p class="gambar-btn-3">Buat Donasi</p>
-                    </div>
-                </div>
+
             </div>
         </div>
 
